<resources>
    <string name="Automatic_progressive_course">Automatic progressive course</string>
    <string name="BluetoothPeripheral_privacy_mini">to pilot your minidrones and connect your controllers</string>
    <string name="BluetoothPeripheral_privacy_pro">to connect your Bluetooth controllers</string>
    <string name="CameraUsage_privacy_mini">to shoot your flying drone</string>
    <string name="CameraUsage_privacy_pro">to use the Parrot Cockpitglasses</string>
    <string name="Coordiante_last_drone_data">N/A</string>
    <string name="Landing_on_last_way">Landing on last way</string>
    <string name="ME003004">Retrieving...</string>
    <string name="ME003005">Impossible to connect to the product</string>
    <string name="ME003006">Impossible to connect...</string>
    <string name="ME003010">Delete</string>
    <string name="ME003011">Do you want to delete this media ?</string>
    <string name="ME003013">Do you want to transfer this media ?</string>
    <string name="ME003014">Transferring...</string>
    <string name="ME003018">File</string>
    <string name="ME003020">Deleting...</string>
    <string name="ME004003">No Media</string>
    <string name="Music_privacy">to add your favorite music to a Best of.</string>
    <string name="PI100003">User emergency alert</string>
    <string name="PI100004">Cut out alert</string>
    <string name="PI100005">Critical battery alert</string>
    <string name="PI100006">Low battery alert</string>
    <string name="PhotoLibrary_privacy_pro">to store photos and videos of your flights</string>
    <string name="Plan_cd_edit">Edit</string>
    <string name="Plan_cd_folder">Folder</string>
    <string name="Plan_cd_go_back">Go back</string>
    <string name="Plan_cd_invalidate">Invalidate</string>
    <string name="Plan_cd_location">Location</string>
    <string name="Plan_cd_play">Play</string>
    <string name="Plan_cd_speed">Speed</string>
    <string name="Plan_cd_stop">Stop</string>
    <string name="Plan_cd_switch_view_type">Switch view</string>
    <string name="Plan_cd_timeline">Timeline</string>
    <string name="Plan_cd_undo">Undo</string>
    <string name="Plan_cd_validate">Validate</string>
    <string name="a_axis">A axis</string>
    <string name="a_new_plan">a new plan?</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abort">Cancel</string>
    <string name="about">Legal mentions</string>
    <string name="about_enter_email">Enter your e-mail</string>
    <string name="about_enter_valid_email">Please enter a valid email address</string>
    <string name="about_information">About</string>
    <string name="about_legal_mentions">Legal mentions</string>
    <string name="about_legal_mentions_accept">Accept</string>
    <string name="about_legal_mentions_refuse">Refuse</string>
    <string name="about_mapKit_legal_mentions">MapKit Legal notice</string>
    <string name="about_share_data_title">I accept to provide my data</string>
    <string name="about_title">About</string>
    <string name="academy_error_already_registered">%s is already registered</string>
    <string name="academy_error_cannot_reset_password">The user account associated with this email address cannot reset the password.</string>
    <string name="academy_error_connection">"Internet connection
not available"</string>
    <string name="academy_error_email_not_associated">This email address isn’t associated with an user account.</string>
    <string name="academy_error_empty_fields">Login and password need to be filled</string>
    <string name="academy_error_generic">There is an error, please try again</string>
    <string name="academy_error_invalid">%s is invalid</string>
    <string name="academy_error_required">%s is required</string>
    <string name="academy_error_too_long">%s is too long</string>
    <string name="academy_login_connection">Connection</string>
    <string name="academy_login_description">Create an account to access advanced stats on your piloting, and share it with the community.</string>
    <string name="academy_login_error_auth">Error in Login or Password</string>
    <string name="academy_login_error_dialog_title">Login has failed</string>
    <string name="academy_login_forgotten_password">I think I forgot my password</string>
    <string name="academy_login_not_signed_up">Not Registered Yet ?</string>
    <string name="academy_login_password">Password</string>
    <string name="academy_login_remember_me">Stay connected</string>
    <string name="academy_login_sign_up">Sign up</string>
    <string name="academy_login_title">Login</string>
    <string name="academy_login_username">Username</string>
    <string name="academy_map">Parrot Cloud map</string>
    <string name="academy_profile_cd_address">Address</string>
    <string name="academy_profile_cd_adress">Address</string>
    <string name="academy_profile_cd_back">Go back</string>
    <string name="academy_profile_cd_biography">Biography</string>
    <string name="academy_profile_cd_birthday">Birthday</string>
    <string name="academy_profile_cd_city">City</string>
    <string name="academy_profile_cd_country">Country</string>
    <string name="academy_profile_cd_crash">Crash</string>
    <string name="academy_profile_cd_drone">Drone</string>
    <string name="academy_profile_cd_email">Email</string>
    <string name="academy_profile_cd_facebook">Facebook</string>
    <string name="academy_profile_cd_firstname">First Name</string>
    <string name="academy_profile_cd_google">Google +</string>
    <string name="academy_profile_cd_google_plus">Google +</string>
    <string name="academy_profile_cd_lastname">Last Name</string>
    <string name="academy_profile_cd_name">Name</string>
    <string name="academy_profile_cd_phone">Phone</string>
    <string name="academy_profile_cd_pilotings">Pilotings</string>
    <string name="academy_profile_cd_postal_code">Postal Code</string>
    <string name="academy_profile_cd_psn">PSN</string>
    <string name="academy_profile_cd_save">Save</string>
    <string name="academy_profile_cd_status">Status</string>
    <string name="academy_profile_cd_steam">Steam</string>
    <string name="academy_profile_cd_time">Time</string>
    <string name="academy_profile_cd_twitter">Twitter</string>
    <string name="academy_profile_cd_visibility">Visibility</string>
    <string name="academy_profile_cd_website">Website</string>
    <string name="academy_profile_cd_xbox">Xbox Live</string>
    <string name="academy_profile_cd_xbox_live">Xbox Live</string>
    <string name="academy_profile_cd_youtube">Youtube</string>
    <string name="academy_profile_time_hms">%1$d h %2$d m %3$d s</string>
    <string name="academy_profile_time_ms">%1$d m %2$d s</string>
    <string name="academy_profile_time_s">%d s</string>
    <string name="academy_retrieve_password_dialog_title">Retrieve Password</string>
    <string name="academy_retrieve_password_email_hint">Email Address</string>
    <string name="academy_retrieve_password_error_cannot_reset_password">The user account associated with this email address cannot reset the password.</string>
    <string name="academy_retrieve_password_error_email">Email Address</string>
    <string name="academy_retrieve_password_error_email_invalid">Email invalid</string>
    <string name="academy_retrieve_password_error_email_not_associated">This email address isn’t associated with an user account.</string>
    <string name="academy_retrieve_password_error_password">Password</string>
    <string name="camera_settings_cd_anti_flickering">Anti-flickering</string>
    <string name="camera_settings_cd_mode">Camera settings mode</string>
    <string name="camera_settings_cd_picture_format">Picture format</string>
    <string name="camera_settings_cd_white_balance">White balance</string>
    <string name="camera_settings_unit_hz">Hz</string>
    <string name="cd_back">Go back</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="delete">Delete</string>
    <string name="drone_memory_select_all">Select All</string>
    <string name="drone_school">Drone school</string>
    <string name="film_plan">Flight Plan</string>
    <string name="flight_director_data_tab_title">Flight data</string>
    <string name="flight_director_duration_tab_title">Length</string>
    <string name="flight_director_moments_tab_title">Moments</string>
    <string name="flight_director_music_tab_title">Music</string>
    <string name="flight_director_preview_tab_title">Preview</string>
    <string name="flight_director_style_tab_title">Style</string>
    <string name="map_preloading">Map preloading</string>
    <string name="mavlink_cd_load">Load</string>
    <string name="mavlink_cd_save">Save</string>
    <string name="mavlink_cd_save_as">Save as</string>
    <string name="media_cd_delete">Delete</string>
    <string name="media_cd_list">List</string>
    <string name="media_cd_media_action">Media action</string>
    <string name="media_cd_select_all">All</string>
    <string name="media_cd_transfer">Transfer</string>
    <string name="media_drone_memory">Drone memory</string>
    <string name="media_transfer_button_text">Transfer</string>
    <string name="my_gallery_title">Gallery</string>
    <string name="myparrot_data_title">Data confidentiality</string>
    <string name="new_">New</string>
    <string name="piloting_cd_go_back">Go back</string>
    <string name="piloting_cd_photo">Photo</string>
    <string name="piloting_cd_settings">Settings</string>
    <string name="profile_birthday">Birthday</string>
    <string name="profile_first_name">First Name</string>
    <string name="profile_last_name">Last Name</string>
    <string name="profile_phone">Phone</string>
    <string name="saved_flight_plans">Saved flight plans</string>
    <string name="welcome_buy_a_drone">Buy a drone</string>
    <string name="whats_news_menu_short">"What's new"</string>
</resources>