<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    n1:id="@id/base_layout"
    n1:background="@drawable/background"
    n1:layout_width="fill_parent"
    n1:layout_height="fill_parent"
    xmlns:n1="http://schemas.android.com/apk/res/android">
    <android.support.v7.widget.Toolbar
        n1:id="@id/toolbar"
        n1:layout_width="fill_parent"
        n1:layout_height="wrap_content">
        <ImageButton
            n1:layout_gravity="center_vertical"
            n1:id="@id/button_back"
            n1:background="@drawable/circular_button_background"
            n1:layout_width="@dimen/piloting_button_size"
            n1:layout_height="@dimen/piloting_button_size"
            n1:layout_margin="@dimen/piloting_buttons_margin"
            n1:src="@drawable/drawable_hud_back"
            n1:scaleType="centerInside" />
        <TextView
            n1:textSize="@dimen/home_title_text_size"
            n1:textColor="@color/white"
            n1:layout_gravity="center"
            n1:id="@id/text_toolbar_title"
            n1:layout_width="wrap_content"
            n1:layout_height="wrap_content"
            n1:text="@string/media_drone_memory" />
        <Button
            n1:textColor="@color/white"
            n1:layout_gravity="end"
            n1:id="@id/select_all_button"
            n1:background="?selectableItemBackground"
            n1:visibility="gone"
            n1:layout_width="wrap_content"
            n1:layout_height="fill_parent"
            n1:text="@string/drone_memory_select_all"
            n1:contentDescription="@string/media_cd_select_all"
            style="@style/ToolbarButton" />
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        n1:id="@id/layout_memory_info"
        n1:background="@color/transparent_medium_grey"
        n1:layout_width="fill_parent"
        n1:layout_height="@dimen/drone_memory_info_height"
        n1:layout_below="@id/toolbar">
        <TextView
            n1:textSize="@dimen/list_row_text_size_primary"
            n1:gravity="center"
            n1:id="@id/text_media_count"
            n1:layout_width="wrap_content"
            n1:layout_height="fill_parent"
            n1:layout_marginStart="@dimen/list_row_main_icon_margin" />
        <com.parrot.freeflight.view.PieChart
            n1:id="@id/pie_chart_memory_space"
            n1:layout_width="@dimen/drone_memory_info_piechart_size"
            n1:layout_height="@dimen/drone_memory_info_piechart_size"
            n1:layout_centerVertical="true"
            n1:layout_marginEnd="@dimen/list_row_main_icon_margin"
            n1:layout_toStartOf="@id/text_memory_space" />
        <TextView
            n1:gravity="center"
            n1:id="@id/text_memory_space"
            n1:layout_width="wrap_content"
            n1:layout_height="fill_parent"
            n1:layout_marginEnd="@dimen/drone_memory_marginEnd"
            n1:layout_alignParentEnd="true" />
    </RelativeLayout>
    <ListView
        n1:id="@id/list"
        n1:visibility="invisible"
        n1:layout_width="fill_parent"
        n1:layout_height="fill_parent"
        n1:divider="@null"
        n1:dividerHeight="0.0dip"
        n1:layout_above="@id/bottom_bar"
        n1:layout_below="@id/layout_memory_info"
        n1:contentDescription="@string/media_cd_list" />
    <TextView
        n1:textSize="@dimen/drone_memory_empty_text_size"
        n1:id="@id/empty"
        n1:visibility="invisible"
        n1:layout_width="wrap_content"
        n1:layout_height="wrap_content"
        n1:text="@string/ME004003"
        n1:layout_centerInParent="true" />
    <LinearLayout
        n1:gravity="center"
        n1:orientation="vertical"
        n1:id="@id/loading_layout"
        n1:visibility="visible"
        n1:layout_width="fill_parent"
        n1:layout_height="fill_parent"
        n1:layout_above="@id/bottom_bar"
        n1:layout_below="@id/toolbar">
        <ProgressBar
            n1:id="@id/progress_loading"
            n1:layout_width="wrap_content"
            n1:layout_height="wrap_content"
            n1:layout_marginBottom="@dimen/drone_memory_progress_marginBottom"
            style="@style/Base.Widget.AppCompat.ProgressBar" />
        <TextView
            n1:textSize="@dimen/drone_memory_retrieving_text_size"
            n1:gravity="center"
            n1:id="@id/retrieving_textview"
            n1:layout_width="wrap_content"
            n1:layout_height="wrap_content"
            n1:text="@string/ME003004" />
    </LinearLayout>
    <RelativeLayout
        n1:id="@id/bottom_bar"
        n1:background="@color/transparent_dark_grey"
        n1:visibility="gone"
        n1:layout_width="fill_parent"
        n1:layout_height="@dimen/toolbar_height"
        n1:layout_alignParentBottom="true"
        n1:layout_alignParentStart="true"
        n1:layout_alignParentEnd="true">
        <Button
            n1:textColor="@color/drone_memory_bottom_bar_delete_text"
            n1:id="@id/button_delete"
            n1:background="?selectableItemBackground"
            n1:layout_width="wrap_content"
            n1:layout_height="fill_parent"
            n1:text="@string/ME003010"
            n1:contentDescription="@string/media_cd_delete"
            n1:layout_alignParentStart="true"
            style="@style/ToolbarButton" />
        <TextView
            n1:gravity="center"
            n1:id="@id/media_action_center_label"
            n1:layout_width="wrap_content"
            n1:layout_height="fill_parent"
            n1:minWidth="@dimen/drone_memory_center_label_min_width"
            n1:layout_centerInParent="true"
            n1:contentDescription="@string/media_cd_media_action"
            style="@style/ToolbarLabel" />
        <Button
            n1:textColor="@color/yellow"
            n1:id="@id/transfer_button"
            n1:background="?selectableItemBackground"
            n1:layout_width="wrap_content"
            n1:layout_height="fill_parent"
            n1:text="@string/media_transfer_button_text"
            n1:contentDescription="@string/media_cd_transfer"
            n1:layout_alignParentEnd="true"
            style="@style/ToolbarButton" />
    </RelativeLayout>
    <View
        n1:background="@color/drone_memory_bottom_bar_shadow"
        n1:layout_width="fill_parent"
        n1:layout_height="@dimen/drone_memory_bottom_bar_shadow_height"
        n1:layout_above="@id/bottom_bar" />
    <FrameLayout
        n1:id="@id/operation_fragment_container"
        n1:layout_width="fill_parent"
        n1:layout_height="fill_parent" />
</RelativeLayout>